# Iriscope

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.toml  docker-compose.ssh.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
constraints/: ci.txt
docker/: iriscope-host-entrypoint.sh
iriscope/: __init__.py  calibration.py  capture.py  cli.py  config.py  evaluation.py  labeling.py  processing.py  review.py  web_api.py
provision/pi-zero-w/: README.md  apt-packages.txt  iriscope-boot-update.service  iriscope-boot-update.sh  setup-iriscope-pi.sh
scripts/: iriscope-docker-watchdog.ps1  iriscope-docker-watchdog.sh
tests/: test_calibration.py  test_capture.py  test_cli.py  test_config.py  test_evaluation.py  test_labeling.py  test_processing_synthetic.py  test_web_api.py  test_web_api_contract.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
web/tests/: iriscope-smoke.spec.ts
